--- a/style.css
+++ b/style.css
@@ -13,18 +13,22 @@ body {
 }
 /* Header */
 header {
-  background: #f7d063;
+  background: linear-gradient(to right, #00120b, #042f24);
 }
 nav {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
   padding: 1.5rem 3.5rem;
 }
 .logo {
-  color: #737b91;
+  color: #d8e4ff;
   font-size: 2.5rem;
   letter-spacing: 0.2rem;
+}
+.highlight {
+  color: red;
 }
 
 ul {
@@ -37,11 +41,11 @@ li {
 a {
   text-decoration: none;
   font-size: 1.3rem;
-  color: #002500;
+  color: #d8e4ff;
   transition: all 0.3s;
 }
 a:hover {
-  color: #c4b486;
+  color: #31e981;
   text-decoration: underline;
 }
 /* 1st section */
@@ -52,27 +56,27 @@ a:hover {
   flex-wrap: wrap;
   padding: 5rem 3.5rem;
   gap: 1rem;
-  background: #f7d063;
+  background: linear-gradient(to right, #00120b, #042f24);
 }
 .txt {
   flex: 2;
 }
 .txt span {
-  color: #737b91;
+  color: #d8e4ff;
   font-size: 3rem;
 }
 .txt h1 {
   font-size: 3.5rem;
-  color: #f95738;
+  color: #d8e4ff;
   margin-bottom: 2rem;
 }
 
 .txt p {
   font-size: 2rem;
-  color: #002500;
+  color: #d8e4ff;
 }
 
-img {
+.intro img {
   flex: 1;
   min-width: 30rem;
   height: auto;
@@ -81,53 +85,70 @@ img {
 /* Reason */
 .reason {
   padding: 2rem;
-  border-bottom: #e29578 1px solid;
+  background: #f2f1ed;
+  overflow-x: hidden;
 }
 .reason > p {
   margin-bottom: 2rem;
   text-align: center;
   font-size: 2.5rem;
-  color: #002500;
+  color: #00120b;
   text-decoration: underline;
 }
+
 .sticker {
   display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+  gap: 0.5rem;
+
   flex-wrap: wrap;
+}
+.fig {
   flex: 1;
-}
-.pic {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 1rem;
-}
-.stack {
   display: flex;
   flex-direction: column;
-  flex: 2;
-  margin: 2rem;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 0.8rem;
 }
-.stack p {
+.fig img {
+  max-width: 100%;
+  height: 200px;
+  object-fit: cover;
+  display: block;
+  border-radius: 0.5rem;
+}
+.fig figcaption {
   text-align: center;
-  font-size: 1.3rem;
+  color: #00120b;
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 /* Services */
 article {
   padding: 3.5rem;
-  background: #f7d063;
+  background: linear-gradient(to right, #00120b, #042f24);
 }
 .service h3 {
   text-decoration: underline;
   font-size: 2rem;
   margin-bottom: 1.2rem;
-  color: #002500;
+  color: #d8e4ff;
 }
 article h1 {
   font-size: 3rem;
-  color: #002500;
+  color: #d8e4ff;
   margin-bottom: 2rem;
 }
 .service p {
   font-size: 1.3rem;
+  color: #d8e4ff;
 }
 
 .service {
@@ -136,15 +157,17 @@ article h1 {
 /* Reviews */
 .reviews {
   padding: 3.5rem;
+  background: #f2f1ed;
 }
 .reviews h2 {
-  color: #002500;
+  color: #00120b;
   font-size: 3rem;
   text-align: center;
   margin-bottom: 2rem;
 }
 .star p {
   font-size: 1.3rem;
+  color: #00120b;
 }
 .star {
   display: flex;
@@ -160,35 +183,118 @@ em {
 }
 /* Book */
 main {
-  padding: 5rem 3.5rem;
+  padding: 3.5rem;
   display: flex;
   justify-content: space-between;
-  background: #f7d063;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  background: linear-gradient(to right, #00120b, #042f24);
 }
 main p {
-  font-size: 2.5rem;
-  color: #002500;
+  font-size: 2rem;
+  color: #d8e4ff;
 }
 .cta {
   padding: 1rem 2.5rem;
-  color: #e29578;
+  color: #00120b;
   border-radius: 1rem;
   font-size: 2rem;
   cursor: pointer;
-  background: black;
+  background: #d8e4ff;
+  outline: 0;
+  border: 0;
   letter-spacing: 0.5rem;
   transition: all 0.3s;
 }
 .cta:hover {
-  background: #f7d063;
-  color: black;
+  background: #00120b;
+  color: #d8e4ff;
+  border: 1px #d8e4ff solid;
 }
 /* Footer */
 footer {
   text-align: center;
   padding: 3.5rem;
+  background: #f2f1ed;
 }
 footer p {
   font-size: 1rem;
-  color: #002500;
+  color: #00120b;
+}
+/* media queries */
+@media (max-width: 864px) {
+  .txt {
+    text-align: center;
+  }
+}
+@media (max-width: 805px) {
+  main {
+    justify-content: center;
+    padding: 1.5rem;
+  }
+}
+@media (max-width: 695px) {
+  li {
+    padding: 0.5rem;
+  }
+
+  nav {
+    padding: 1.5rem;
+  }
+  .intro {
+    padding: 1.5rem;
+  }
+  .reason {
+    padding: 1.5rem;
+  }
+  article {
+    padding: 1.5rem;
+  }
+  .reviews {
+    padding: 1.5rem;
+  }
+  main {
+    padding: 1.5rem;
+  }
+  article h1 {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  .service h3,
+  .service p {
+    font-size: 1.3rem;
+  }
+}
+@media (max-width: 535px) {
+  nav {
+    justify-content: center;
+  }
+  .intro img {
+    min-width: 20rem;
+  }
+  article h1 {
+    text-align: center;
+  }
+  .star p {
+    text-align: center;
+  }
+}
+@media (max-width: 422px) {
+  .cta {
+    padding: 0.5rem 1rem;
+    font-size: 1.4rem;
+  }
+  main p {
+    font-size: 1.2rem;
+  }
+  li a {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 348px) {
+  .intro img {
+    min-width: 15rem;
+  }
 }
