--- a/style.css
+++ b/style.css
@@ -209,14 +209,14 @@ article h1 {
 /* Book */
 
 .main {
-  padding: 3.5rem;
+  padding-bottom: 3.5rem;
 }
 .last {
   flex: 1;
   display: flex;
   align-items: center;
   justify-content: space-between;
-
+  padding: 2rem;
   color: #d8e4ff;
   font-size: 2rem;
 }
@@ -340,6 +340,10 @@ article h1 {
   text-align: center;
   padding: 1rem;
   background: #f2f1ed;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
 }
 
 footer p {
